--- a/package.json
+++ b/package.json
@@ -13,18 +13,27 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
+    "@react-aria/calendar": "^3.5.11",
+    "@react-aria/interactions": "^3.22.2",
+    "@react-stately/calendar": "^3.5.4",
     "@react-stately/collections": "^3.10.9",
     "@react-stately/combobox": "^3.9.2",
     "@react-stately/overlays": "^3.6.10",
     "@react-stately/select": "^3.6.7",
+    "@react-stately/utils": "^3.10.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@spectrum-icons/workflow": "^4.2.14",
+    "@spectrum-web-components/icons-workflow": "^0.48.0",
     "aws-amplify": "^6.6.2",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "next": "14.2.7",
     "react": "^18",
     "react-aria": "^3.34.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-stately": "^3.32.2"
   },
   "devDependencies": {
     "@types/node": "^20",
