--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@spectrum-icons/workflow": "^4.2.14",
     "@spectrum-web-components/icons-workflow": "^0.48.0",
+    "autoprefixer": "^10.4.20",
     "aws-amplify": "^6.6.2",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
@@ -41,8 +42,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "tailwindcss-inner-border": "^0.2.0",
     "typescript": "^5"
   }
