--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+     "build:prod": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,6 +13,11 @@
     "@aws-amplify/ui-react": "^6.5.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@mui/icons-material": "^6.0.2",
     "@react-aria/calendar": "^3.5.11",
     "@react-aria/interactions": "^3.22.2",
@@ -33,11 +39,13 @@
     "react-aria": "^3.34.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-headless-pagination": "^1.1.6",
     "react-redux": "^9.1.2",
-    "react-stately": "^3.32.2"
+    "react-stately": "^3.32.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
