--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.0",
+    "@aws-amplify/auth": "^6.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fullcalendar/core": "^6.1.15",
@@ -31,7 +32,7 @@
     "@spectrum-icons/workflow": "^4.2.14",
     "@spectrum-web-components/icons-workflow": "^0.48.0",
     "autoprefixer": "^10.4.20",
-    "aws-amplify": "^6.6.2",
+    "aws-amplify": "^6.0.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "next": "14.2.7",
