patient appointments, rating and services added

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_API_URL=http://localhost:5000/
+NEXT_PUBLIC_USER_POOL_ID=us-east-1_fHJgzh35m
+NEXT_PUBLIC_USER_POOL_CLIENT_ID=7amj41ipumiqg58qlqh0eeo06j
+NEXT_PUBLIC_AWS_REGION=us-east-1
