--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "frontendefbd6aa0": {
+    "frontend3ab8b037": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
