--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@mui/icons-material": "^6.0.2",
     "@react-aria/calendar": "^3.5.11",
     "@react-aria/interactions": "^3.22.2",
+    "@react-aria/table": "^3.14.0",
     "@react-stately/calendar": "^3.5.4",
     "@react-stately/collections": "^3.10.9",
     "@react-stately/combobox": "^3.9.2",
     "@react-stately/overlays": "^3.6.10",
     "@react-stately/select": "^3.6.7",
+    "@react-stately/table": "^3.11.0",
     "@react-stately/utils": "^3.10.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@spectrum-icons/workflow": "^4.2.14",
